<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.studentcommunityapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_articleFragment"
            app:destination="@id/articleFragment" />
        <action
            android:id="@+id/action_navigation_home_to_followFragment"
            app:destination="@id/followFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_course"
        android:name="com.example.studentcommunityapp.ui.course.CourseFragment"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_course" >
        <action
            android:id="@+id/action_navigation_course_to_addCourseFragment"
            app:destination="@id/addCourseFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.studentcommunityapp.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_navigation_user_to_settingFragment"
            app:destination="@id/settingFragment" />
        <action
            android:id="@+id/action_navigation_user_to_modifyAvatarFragment"
            app:destination="@id/modifyAvatarFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_publish"
        android:name="com.example.studentcommunityapp.ui.publish.PublishFragment"
        android:label="@string/title_publish"
        tools:layout="@layout/fragment_publish" />
    <fragment
        android:id="@+id/articleFragment"
        android:name="com.example.studentcommunityapp.ui.article.ArticleFragment"
        android:label="article_fragment"
        tools:layout="@layout/article_fragment" />
    <fragment
        android:id="@+id/followFragment"
        android:name="com.example.studentcommunityapp.ui.follow.FollowFragment"
        android:label="follow_fragment"
        tools:layout="@layout/follow_fragment" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.studentcommunityapp.ui.login.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/login_fragment" />
    <fragment
        android:id="@+id/addCourseFragment"
        android:name="com.example.studentcommunityapp.ui.course.addCourse.AddCourseFragment"
        android:label="add_course_fragment"
        tools:layout="@layout/add_course_fragment" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.studentcommunityapp.ui.settings.SettingFragment"
        android:label="setting_fragment"
        tools:layout="@layout/setting_fragment" />
    <fragment
        android:id="@+id/modifyAvatarFragment"
        android:name="com.example.studentcommunityapp.ui.modifyavatar.ModifyAvatarFragment"
        android:label="modify_avatar_fragment"
        tools:layout="@layout/modify_avatar_fragment" />
</navigation>
