<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDGray"
    tools:context=".ui.publish.PublishFragment">

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/upload_nav_view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="0dp"-->
    <!--        android:layout_marginEnd="0dp"-->
    <!--        android:background="?android:attr/windowBackground"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:menu="@menu/bottom_nav_upload" />-->


    <ScrollView
        android:id="@+id/publish_scrollView_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/upload_nav_view"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/vf_sketch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/upload_nav_view"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/article_tab" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vf_sketch"
                    android:textColor="@color/colorGreen"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <EditText
                android:id="@+id/input_vf_title"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/txt_input"
                android:ems="15"
                android:gravity="top|left"
                android:hint="@string/vf_title"
                android:padding="8dp"
                android:textSize="15sp"
                tools:ignore="DuplicateIds"/>

            <EditText
                android:id="@+id/input_vf_introduction"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/txt_input"
                android:ems="150"
                android:gravity="top|left"
                android:hint="@string/vf_introduction"
                android:padding="8dp"
                android:textSize="15sp"
                tools:ignore="DuplicateIds"/>

            <TextView
                android:layout_width="360dp"
                android:layout_height="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/article_CoverMap"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/input_vf_CoverMap"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/txt_input"
                    android:gravity="top|left"
                    android:padding="8dp"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/image_vf_CoverMap"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/txt_input_dot"

                    android:src="@drawable/article_cover"
                    tools:ignore="MissingConstraints" />


            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/article_tab" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vf_content"
                    android:textColor="@color/colorGreen"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <EditText
                android:id="@+id/input_vf_title_1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/txt_input"
                android:ems="15"
                android:gravity="top|left"
                android:hint="@string/vf_title_content"
                android:padding="8dp"
                android:textSize="15sp"/>


            <Button
                android:id="@+id/vf_add_button"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/txt_tab_addcourse"
                android:padding="8dp"
                android:text="@string/vf_button"
                android:textColor="@color/white"
                android:textSize="20dp"/>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/colorDGray"
                />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>